--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,13 +3,24 @@
   src: url(../fonts/Inter-VariableFont_slnt\wght.ttf);
 }
 
+*{
+  margin: 0;
+  padding: 0;
+}
+
 body {
   font-family: "Inter", sans-serif;
   background-color: #f8f9fa;
   overflow-x: hidden;
 }
+/* /////////////////////////////////////////////////////////////////////////////////////// */
 
 
+
+
+
+
+/* /////////////////////////////////////////////////////////////////////////// */
 a {
   text-decoration: none !important;
   color: black;
@@ -252,9 +263,29 @@ abbr {
   .balance {
     height: 100px;
   }
+  .hide-left-sidebar{
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    width: fit-content;
+    padding: 20px;
+    border-end-end-radius: 20px;
+    transition: transform .4s;
+    transform: translateX(-100%);
+  }
+
+  .show-left-sidebar{
+    transition: transform .4s;
+    transform: none;
+    height: 100vh;
+    overflow: scroll;
+
+  }
+  
 }
 
-@media (max-width: 767.98px) {
+/* @media (max-width: 767.98px) {
   .media .row .col {
     flex: 0 0 50%;
     max-width: 50%;
@@ -266,7 +297,7 @@ abbr {
     flex: 0 0 100%;
     max-width: 100%;
   }
-}
+} */
 
 .account-balance-section {
   position: relative;
@@ -319,7 +350,7 @@ abbr {
     height: 120px;
   }
 
-  #left-sidebar{
+  .hide-left-sidebar{
     position: absolute;
     top: 0;
     left: 0;
@@ -327,7 +358,16 @@ abbr {
     width: fit-content;
     padding: 20px;
     border-end-end-radius: 20px;
+    transform: translateX(-100%);
   }
+
+  .show-left-sidebar{
+    transform: none;
+  }
+
+
+
+ 
 }
 
 .mobile-bottom-nav {
